
* Important Bugfixes

** #904: MOVE PACKED-DECIMAL unsigned to signed led to bad sign
** Padding bytes of BCD may store a non-truncated digit; while
   this has no effect on calculations it can create problems on
   later binary comparison of the field as well as on group MOVEs
** #918: COB_LS_VALIDATE (io status 09 and 71) partial broken

* Changes to the COBOL compiler (cobc) options:

** output of unlimited errors may be requested by -fmax-errors=0,
   to stop compiliation at first error use -Wfatal-errors
** default value for -fmax-errors was changed from 128 to 20

** New option -fdiagnostics-absolute-paths to print the full path of
   a file for diagnostics; this flag can be activated if your editor and
   build system do not correctly work together to locate files from
   diagnostic output

* More notable changes

** execution times were significantly reduced for the following:
	comparison between a numeric DISPLAY variable to another or to a literal
	comparison between numeric DISPLAY or BCD variable to zero
	INSPECT CONVERTING (and "simple" INSPECT REPLACING), in general
	   and especially if both from and to are constants

* Known issues in 3.x

** testsuite:
  * if built with vbisam, cisam or disam, depending on the version used, some
    tests will lead to UNEXPECTED PASS, while others may fail
  * possibly failing tests (false positives):
    * temporary path invalid
    * compiler outputs (assembler)
    * compile from stdin
  * NIST: OBNC1M.CBL false positive (the test runner uses a nonportable way of
    emulating a program kill)
  * if build with -fsanitize, then some tests will fail; while we accept patches
    to improve that, we don't consider the failing tests as bug in GnuCOBOL

** the recent additions of ">> TURN" and "variable LIKE variable" may not work
   as expected in all cases

** floating-point comparison for equality may return unexpected results as it
   involves a necessary tolerance; you may adjust the default tolerance of