@@ -474,6 +474,7 @@ extern FILE			*cb_src_list_file;
 extern FILE			*cb_depend_file;
 extern struct cb_text_list	*cb_depend_list;
 extern struct cb_text_list	*cb_copy_list;
+extern struct cb_text_list	*cb_include_file_list;
 extern struct cb_text_list	*cb_include_list;
 extern struct cb_text_list	*cb_intrinsic_list;
 extern struct cb_text_list	*cb_extension_list;
