@@ -1829,6 +1829,17 @@ output_gnucobol_defines (const char *formatted_date)
 		current_compile_tm.tm_sec;
 	output_line ("#define  COB_MODULE_TIME\t\t%d", i);
 
+	{
+		struct cb_text_list *l = cb_include_file_list ;
+		for (;l;l=l->next){
+			if (l->text[0] == '<'){
+				output_line ("#include %s", l->text);
+			} else {
+				output_line ("#include \"%s\"", l->text);
+			}
+		}
+	}
+
 }
 
 /* CALL cache */
