@@ -373,6 +373,18 @@ another process. You can manually set an output file using @option{-o}.
 Include @file{copybook} at the beginning of the source code, as if
 @code{COPY copybook} had been parsed.
 
+@item --include @var{file.h}
+Add a @code{#include} @file{file.h} at the beginning of the generated
+C source file. The file name is put into quotes, unless it starts by
+@code{<}. Quoted files should be absolute paths, since C files are compiled
+in temporary directories.
+The option also implies @option{-fno-gen-c-decl-static-call}.
+This option can be used to check function prototypes when
+static calls are used. When this option is used, the source file is
+compiled in the project directory (instead of the temp directory), and
+no prototypes are generated, so ALL static call functions must appear
+in the header file, with GnuCOBOL compatible types.
+
 @item -C
 Translation only.  COBOL source files are translated into C files.
 The output is saved in file @file{*.c}.
